Home page is almost done

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,5 +4,5 @@
 
 @font-face {
     font-family: 'fontOne';
-    src: url(./assets/Fonts/fontOne.ttf);
+    src: url(./assets/Fonts/fontOne.otf);
 }
